convertedToMDAPI/objects/CCL_WizardStep__mdt.object
<CustomObject>
    <description>Metadata configuration driving a step that composes a Wizard (PRF, ADF...)</description>
    <label>Wizard Step</label>
    <pluralLabel>Wizard Steps</pluralLabel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Type of component fro this Wizard step</description>
        <inlineHelpText>Type of component fro this Wizard step</inlineHelpText>
        <label>Component</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRF_START</fullName>
                    <default>true</default>
                    <label>PRF_START</label>
                </value>
                <value>
                    <fullName>Wizard_Fieldset</fullName>
                </value>
                <value>
                    <fullName>PRF_Logistics</fullName>
                </value>
                <value>
                    <fullName>ADF_START</fullName>
                </value>
                <value>
                    <fullName>ADF_Cryobags</fullName>
                </value>
                <value>
                    <fullName>PRF_END</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldSet__c</fullName>
        <description>Name of the Field Set to use with this Wizard step</description>
        <inlineHelpText>Name of the Field Set to use with this Wizard step</inlineHelpText>
        <label>Field Set</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>Name of the object the Wizard step will persist against (ex: Case, PRF__c)</description>
        <inlineHelpText>Name of the object the Wizard step will persist against (ex: Case, PRF__c)</inlineHelpText>
        <label>Object Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order number in the Wizard</description>
        <inlineHelpText>Order number in the Wizard</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionDescription__c</fullName>
        <description>Description to be displayed for this Wizard step</description>
        <inlineHelpText>Description to be displayed for this Wizard step</inlineHelpText>
        <label>Section Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WizardConfiguration__c</fullName>
        <description>Wizard configuration this step is a part of</description>
        <inlineHelpText>Wizard configuration this step is a part of</inlineHelpText>
        <label>Wizard Configuration</label>
        <referenceTo>CCL_Wizard_Configuration__mdt</referenceTo>
        <relationshipLabel>Wizard Steps</relationshipLabel>
        <relationshipName>Wizard_Steps</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <listViews>
        <fullName>AllFields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Active__c</columns>
        <columns>Component__c</columns>
        <columns>FieldSet__c</columns>
        <columns>ObjectType__c</columns>
        <columns>Order__c</columns>
        <columns>SectionDescription__c</columns>
        <columns>WizardConfiguration__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllFields</label>
    </listViews>
</CustomObject>